@@ -25,6 +25,24 @@
   <browser:page
     zcml:condition="installed collective.sendaspdf"
     for="zope.interface.Interface"
+    name="pdf.header"
+    class=".app.pdfview.Header"
+    template="zpt/pdf.header.pt"
+    permission="zope2.View"
+    />
+
+  <browser:page
+    zcml:condition="installed collective.sendaspdf"
+    for="zope.interface.Interface"
+    name="pdf.footer"
+    class=".app.pdfview.Footer"
+    template="zpt/pdf.footer.pt"
+    permission="zope2.View"
+    />
+
+  <browser:page
+    zcml:condition="installed collective.sendaspdf"
+    for="zope.interface.Interface"
     name="download.pdf"
     class=".app.download.Pdf"
     permission="zope2.View"
